--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
   "author": "Ryo Ota",
   "license": "MIT",
   "devDependencies": {
+    "@types/glob": "^7.1.1",
     "@types/node": "^12.0.7"
   },
   "dependencies": {
     "@types/mocha": "^5.2.7",
     "@types/power-assert": "^1.5.0",
     "espower-typescript": "^9.0.2",
+    "glob": "^7.1.4",
     "mocha": "^6.1.4",
     "power-assert": "^1.6.1",
     "then-request": "^6.0.2",
