--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "license": "MIT",
   "devDependencies": {
     "@types/glob": "^7.1.1",
-    "@types/node": "^12.0.7"
+    "@types/node": "^12.0.7",
+    "@types/request": "^2.48.1"
   },
   "dependencies": {
     "@types/mocha": "^5.2.7",
@@ -30,7 +31,7 @@
     "glob": "^7.1.4",
     "mocha": "^6.1.4",
     "power-assert": "^1.6.1",
-    "then-request": "^6.0.2",
+    "request": "^2.88.0",
     "ts-node": "^8.2.0",
     "typescript": "^3.5.1"
   }
