--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "devDependencies": {
     "@types/glob": "^7.1.1",
     "@types/node": "^12.0.7",
-    "@types/request": "^2.48.1"
+    "@types/request": "^2.48.1",
+    "@types/yargs": "^13.0.0"
   },
   "dependencies": {
     "@types/mocha": "^5.2.7",
@@ -36,6 +37,7 @@
     "power-assert": "^1.6.1",
     "request": "^2.88.0",
     "ts-node": "^8.2.0",
-    "typescript": "^3.5.1"
+    "typescript": "^3.5.1",
+    "yargs": "^13.2.4"
   }
 }
