--- a/package.json
+++ b/package.json
@@ -24,20 +24,19 @@
   "license": "MIT",
   "devDependencies": {
     "@types/glob": "^7.1.1",
-    "@types/node": "^12.6.3",
-    "@types/request": "^2.48.2",
-    "@types/yargs": "^13.0.0"
-  },
-  "dependencies": {
     "@types/mocha": "^5.2.7",
+    "@types/node": "^12.6.3",
     "@types/power-assert": "^1.5.0",
-    "espower-typescript": "^9.0.2",
-    "glob": "^7.1.4",
+    "@types/request": "^2.48.2",
+    "@types/yargs": "^13.0.0",
     "mocha": "^6.1.4",
     "power-assert": "^1.6.1",
-    "request": "^2.88.0",
     "ts-node": "^8.3.0",
-    "typescript": "^3.5.3",
+    "typescript": "^3.5.3"
+  },
+  "dependencies": {
+    "glob": "^7.1.4",
+    "request": "^2.88.0",
     "yargs": "^13.3.0"
   }
 }
