--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "piping-static-host",
-  "version": "0.1.1",
+  "version": "0.1.2-SNAPSHOT",
   "description": "Host static files to Piping Server",
   "bin": {
     "piping-static-host": "dist/src/index.js"
